# c-rrb

./: .gitignore  .travis.yml  COPYING  DOCUMENTATION.md  Makefile  Makefile.am  README  check-rrb.in  configure.ac  run-bench.sh  run-tests.sh
benchmark-suite/: Makefile.am  bench-rrb.sh  gen-all.sh  gen-lined.sh  gen-memory.sh  gen-percent.py  gen-plots.sh  gen-rrb-lined.sh  gen-tagged.sh  grep_array.c  interval.c  interval.h  make-data.sh  memory-plots.sh  memory.sh  pgrep_array.c  pgrep_dummy.c  pgrep_mem_array.c  pgrep_mem_rrb.c  pgrep_rrb.c  plot-all.sh  substr_contains.h
benchmark-suite/script/: calc.gp  candlesticks.py  gen-calculations.sh  gen-catenations.sh
include/: rrb.h
src/: Makefile.am  decrement.h  main.c  rrb.c  rrb.h  rrb.h.in  rrb_alloc.h  rrb_debug.h  rrb_thread.h  rrb_transients.c  rrb_transients.h  unroll.h
test-suite/: Makefile.am  main.c  main.h  printing_example.c  test.h  test_catslice.c  test_concat.c  test_fibocat.c  test_no_cat_segfault.c  test_peek.c  test_pop.c  test_push.c  test_slice.c  test_transient_pop.c  test_transient_push.c  test_transient_push_2.c  test_transient_update.c  test_update.c
